# vllm-omni

./: .gitignore  .pre-commit-config.yaml  README.md  boogu_native_vllm_omni_support_plan.md  pyproject.toml
.buildkite/: pipeline-intel.yaml  pipeline-npu.yaml  test-amd-merge.yml  test-merge.yml  test-nightly.yml  test-ready.yml
.buildkite/amd/: test-amd-ready.yml  test-template-amd-omni.j2
.buildkite/cuda/: pipeline.yml  rebase-pipeline.yml  test-merge.yml  test-nightly.yml  test-ready.yml  test-weekly.yml
.buildkite/intel/: pipeline-intel.yml
.buildkite/npu/: pipeline-npu-a3.yml  pipeline-npu.yml  test-npu-nightly.yml  test-npu-ready.yml
.buildkite/release/: release-pipeline.yml
.github/: CODEOWNERS
.github/workflows/: pre-commit.yml
benchmarks/: README.md
benchmarks/diffusion/: backends.py  diffusion_benchmark_serving.py
benchmarks/fish-speech/: bench_speaker_cache.py
benchmarks/lingbot_video/: README.md  dense_pipeline_parity.py  moe_transformer_parity.py
docker/: Dockerfile.ci  Dockerfile.cuda  Dockerfile.npu  Dockerfile.npu.a3  Dockerfile.npu.ci  Dockerfile.npu.ci.a3  Dockerfile.rocm  Dockerfile.xpu
docs/: .nav.yml  README.md
docs/api/: README.md
docs/cli/: README.md  serve.md
docs/community/: governance.md
docs/configuration/: composable_parallel.md  pd_disaggregation.md  stage_configs.md
docs/contributing/: DOCS_GUIDE.md  README.md  profiling.md
docs/design/: architecture_overview.md  index.md
docs/features/: custom_pipeline.md
docs/getting_started/: quickstart.md
docs/models/: supported_models.md
docs/serving/: audio_generate_api.md  image_edit_api.md  image_generation_api.md  speech_api.md
docs/user_guide/: diffusion_features.md  fault_injection_reliability_matrix.md
examples/: model_display_names.yml
recipes/: README.md
recipes/Boogu/: Boogu-Image.md
recipes/LTX/: LTX-2.3.md
recipes/MammothModa2/: MammothModa2-Preview.md
recipes/OpenBMB/: MiniCPM-o-4_5.md  VoxCPM2.md
recipes/OpenMOSS/: MOSS-TTS.md
recipes/Qwen/: Qwen3-TTS.md
recipes/Robbyant/: LingBot-Video.md
recipes/StabilityAI/: Stable-Audio-Open.md
recipes/audiox/: AudioX.md
recipes/cosmos3/: Cosmos3-Nano.md
recipes/inclusionAI/: Ming-flash-omni-2.0.md
recipes/krea/: Krea-2.md
recipes/mistralai/: Voxtral-TTS.md
requirements/: common.txt
tests/: test_config_factory.py  test_version.py
tests/ar_diffusion/: test_engine_routing.py  test_kv_cache.py  test_kv_orchestration.py  test_paged_attention.py  test_pipeline_bridge.py  test_slot_mapping.py
tests/config/: test_endpoint_policy.py  test_omni_config.py
tests/dfx/: conftest.py
tests/diffusion/: test_diffusion_engine.py  test_diffusion_engine_cleanup.py  test_diffusion_engine_rpc_routing.py  test_diffusion_ipc.py  test_diffusion_model_runner.py  test_diffusion_output_formatter.py  test_diffusion_output_metadata.py  test_diffusion_plugin_hooks.py  test_diffusion_request.py  test_diffusion_scheduler.py  test_diffusion_step_pipeline.py  test_diffusion_streaming_output.py  test_multiproc_engine_concurrency.py  test_stage_diffusion_proc.py
tests/docs/: test_generate_examples.py
tests/dreamzero/: test_pipeline_state.py
tests/engine/: test_async_omni_engine_stage_init.py  test_orchestrator_monitor.py  test_output_modality.py  test_output_processor.py  test_strategy_lb_policy.py
tests/entrypoints/: test_async_omni_diffusion_config.py  test_omni_entrypoints.py  test_omni_sleep_mode.py  test_resolve_dreamzero_config.py  test_serve.py  test_stream_finish_reason.py  test_utils.py
tests/helpers/: assertions.py  media.py  runtime.py  stage_config.py  test_assertions.py
tests/model_extras/: test_model_extras.py
tests/model_tests/: conftest.py
tests/plugin/: test_gguf_diffusion.py
tests/quantization/: test_quack_fp8_gate.py
tests/utils/: test_mm_outputs_partition.py  test_tracking_parser.py
tests/worker/: test_gpu_ar_model_runner.py  test_gpu_generation_model_runner.py  test_min_tokens_stop_ids_guard.py  test_omni_gpu_model_runner.py
tools/: run_jobs_common.sh  run_merge_jobs.sh  run_ready_jobs.sh
tools/nightly/: run_nightly_jobs.sh
tools/pre_commit/: check_test_marks.py
vllm_omni/: outputs.py  patch.py
vllm_omni/attention/: fish_kvcache_attn.py
vllm_omni/config/: config_factory.py  endpoint_policy.py  omni_config.py  pipeline_registry.py  stage_config.py
vllm_omni/deploy/: dreamzero.yaml  fish_qwen3_omni.yaml  hunyuan_video_15.yaml  mammoth_moda2.yaml  mammoth_moda2_ar.yaml  ming_tts.yaml  ming_tts_moe.yaml  minicpmo_4_5.yaml  minicpmo_4_5_2gpu.yaml  minicpmo_4_5_3gpu.yaml  moss_sound_effect.yaml  moss_tts.yaml  moss_tts_80gb.yaml  moss_tts_local.yaml  moss_tts_realtime.yaml  moss_ttsd.yaml  moss_voice_generator.yaml  omnivoice.yaml  qwen3_omni_moe.yaml  qwen3_tts.yaml  qwen3_tts_high_concurrency.yaml  step_audio_2.yaml  step_audio_2_asr.yaml  step_audio_2_async_chunk.yaml  voxcpm2.yaml  wan2_2_ti2v.yaml
vllm_omni/diffusion/: data.py  diffusion_engine.py  inline_stage_diffusion_client.py  ipc.py  model_metadata.py  output_formatter.py  output_metadata.py  registry.py  request.py  stage_diffusion_client.py  stage_diffusion_proc.py
vllm_omni/engine/: arg_utils.py  async_omni_engine.py  mm_outputs.py  orchestrator.py  orchestrator_monitor.py  output_modality.py  output_processor.py  stage_client.py  stage_engine_core_client.py  stage_engine_core_proc_manager.py  stage_engine_startup.py  stage_init_utils.py  stage_pool.py  stage_runtime.py
vllm_omni/entrypoints/: async_omni.py  omni_base.py  utils.py
vllm_omni/experimental/: __init__.py
vllm_omni/inputs/: data.py
vllm_omni/metrics/: definitions.py  stats.py
vllm_omni/model_extras/: audiox.py  lingbot_video.py  mammothmodal2_preview.py  ming_flash_omni.py  registry.py
vllm_omni/outputs/: __init__.py  mm_outputs.py  output_metadata.py  output_modality.py  output_processor.py  utils.py
vllm_omni/plugins/: __init__.py
vllm_omni/quantization/: __init__.py  bitsandbytes_config.py  component_config.py  factory.py  gguf_config.py  mxfp4_config.py  quack_fp8.py
vllm_omni/utils/: mm_outputs.py  (+1 more)
(+609 files in other folders)
